# final_innerlaw

./: .gitignore  FLOW.md  README.md  app.py  pyproject.toml
docs/prompts/: phase1_baseline.md  phase2_ingestion.md  phase3_readiness.md  phase4_chunking.md  phase5_indexing.md  phase6_5_checkpoint.md  phase6_retrieval.md
eval/: questions.example.yaml
rag/: __init__.py  chunking.py  index.py  ingestion.py  readiness.py  retriever.py
